# aphrodite

./: .gitignore  CHANGELOG.md  CONTRIBUTING.md  Cargo.toml  DESIGN.md  LICENSE  README.md
.aphrodite/: intent.txt
.github/workflows/: release.yml  rust-ci.yml  ssr-matrix.yml
.ouroboros/seeds/: seed_20260513T073417Z.yaml
assets/: venus.ansi  venus_40x24.ansi
crates/aphrodite-cli/: Cargo.toml
crates/aphrodite-cli/src/: assets_cmd.rs  banner.rs  banner_venus.ansi  create_cmd.rs  curator_cmd.rs  design_cmd.rs  feedback_cmd.rs  gallery_cmd.rs  init_cmd.rs  log_cmd.rs  main.rs  preview_cmd.rs  refine_cmd.rs  setup_cmd.rs  wiki_cmd.rs
crates/aphrodite-core/: Cargo.toml
crates/aphrodite-core/seed-personas/aldo-bakker/: PERSONA.md
crates/aphrodite-core/seed-personas/charlotte-perriand/: PERSONA.md
crates/aphrodite-core/seed-personas/christoph-niemann/: PERSONA.md
crates/aphrodite-core/seed-personas/dieter-rams/: PERSONA.md
crates/aphrodite-core/seed-personas/ettore-sottsass/: PERSONA.md
crates/aphrodite-core/seed-personas/galileo-galilei/: PERSONA.md
crates/aphrodite-core/seed-personas/kenya-hara/: PERSONA.md
crates/aphrodite-core/seed-personas/massimo-vignelli/: PERSONA.md
crates/aphrodite-core/seed-personas/naoto-fukasawa/: PERSONA.md
crates/aphrodite-core/seed-personas/paul-rand/: PERSONA.md
crates/aphrodite-core/seed-personas/rei-kawakubo/: PERSONA.md
crates/aphrodite-core/seed-personas/stefan-sagmeister/: PERSONA.md
crates/aphrodite-core/seed-personas/tadao-ando/: PERSONA.md
crates/aphrodite-core/seed-skills/asset-standards/: SKILL.md
crates/aphrodite-core/seed-skills/clinical-dashboard/: SKILL.md
crates/aphrodite-core/seed-skills/corporate-identity-systems/: SKILL.md
crates/aphrodite-core/seed-skills/dev-tool-saas-landing/: SKILL.md
crates/aphrodite-core/seed-skills/editorial-portfolio/: SKILL.md
crates/aphrodite-core/seed-skills/mobile-app-screen/: SKILL.md
crates/aphrodite-core/seed-wiki/: aesop-website.md  apartamento.md  are-na.md  figma-site.md  linear-app.md  muji-website.md  naver-papago.md  nyt-magazine.md  pentagram.md  pitchfork.md  pretendard.md  teenage-engineering.md  vercel.md
crates/aphrodite-core/src/: assets.rs  config.rs  curator.rs  design.rs  invocation.rs  lib.rs  personas.rs  policy.rs  preferences.rs  seed.rs  skills.rs  taste.rs  validator.rs  variant.rs  wiki.rs
crates/aphrodite-generator/: Cargo.toml
crates/aphrodite-generator/src/: critic.rs  design_system.rs  docs_site.rs  eval_sweep.rs  extractor.rs  figma_sync.rs  harmonize.rs  hero.rs  lib.rs  offline.rs  orchestrator.rs  provider.rs  provider.rs.bak  react_export.rs  refine.rs  skill.rs  surface.rs  visual_diff.rs  wiki_fetch.rs
crates/aphrodite-keyring/: Cargo.toml
crates/aphrodite-keyring/src/: lib.rs
crates/aphrodite-mcp/: Cargo.toml
crates/aphrodite-mcp/src/: main.rs
docs/: architecture.md  evolution.md  hosts.md  pre-interview-questions.md  roadmap-1.0.md  vision.md
docs-site/: .gitignore  astro.config.mjs  package.json  pnpm-lock.yaml
docs-site/src/components/: ComponentDemo.tsx
docs-site/src/content/: component-list.ts
docs-site/src/layouts/: Layout.astro
docs-site/src/pages/: examples.astro  getting-started.astro  index.astro  publish.astro  quality-score.astro  roadmap.astro  themes.astro
docs-site/src/pages/c/: [name].astro
docs-site/src/styles/: docs.css
docs/adr/: 0001-use-ouroboros-as-upstream-spec.md  0002-design-md-as-design-contract.md  0003-oauth-first-auth.md  0004-autonomous-creation-harness.md
docs/agent-eval/: 2026-05-13-first-agent-pass.md  2026-05-13-narrative.md  2026-05-13-second-agent-pass.md  2026-05-13-third-agent-pass.md  2026-05-14-eighth-agent-pass.md  2026-05-14-eleventh-agent-pass.md  2026-05-14-fifteenth-agent-pass.md  2026-05-14-fifth-agent-pass.md  2026-05-14-fourteenth-agent-pass.md  2026-05-14-fourth-agent-pass.md  2026-05-14-ninth-agent-pass.md  2026-05-14-seventh-agent-pass.md  2026-05-14-sixteenth-agent-pass.md  2026-05-14-sixth-agent-pass.md  2026-05-14-tenth-agent-pass.md  2026-05-14-thirteenth-agent-pass.md  2026-05-14-twelfth-agent-pass.md  improvements.md
docs/agent-eval/archive/: README.md  index.html  journey.html
docs/agent-eval/archive/2026-05-13-pass1-offline/: README.md  gallery.html
docs/agent-eval/archive/2026-05-13-pass2-glm51/: README.md  gallery.html
docs/agent-eval/archive/2026-05-13-pass3-glm51/: README.md  gallery.html
docs/agent-eval/archive/2026-05-14-pass10-harmonize/: DESIGN.md  composition.html  hero.html  result.json
docs/agent-eval/archive/2026-05-14-pass12-persona-authority/: DESIGN.md  composition.html  hero.html  result.json
docs/agent-eval/archive/2026-05-14-pass16-wiki-references/: DESIGN.md  composition.html  hero.html  result.json
docs/agent-eval/archive/2026-05-14-pass4-glm51-surfaces/: gallery.html
docs/agent-eval/archive/2026-05-14-pass5b-controlled/: gallery.html
docs/agent-eval/archive/2026-05-14-pass6-multiturn/: gallery.html
docs/agent-eval/archive/2026-05-14-pass7-reactive/: gallery.html
docs/demos/: variants.html
docs/research/: competitor-harnesses.md
npm-wrapper/: .npmignore  LICENSE  README.md  package.json
npm-wrapper/scripts/: install.js
scripts/: emit-smoke.sh
skills/aphrodite-gallery/: SKILL.md
skills/editorial/: SKILL.md
tests/ssr/: .gitignore  README.md
tests/ssr/next-app/: next.config.js  package.json  pnpm-lock.yaml
tests/ssr/playwright/: component-smoke.spec.ts  package.json  playwright.config.ts  pnpm-lock.yaml
tests/ssr/remix-app/: package.json  pnpm-lock.yaml  tsconfig.json  vite.config.ts
tests/ssr/scripts/: prepare-fixture.sh
tests/ssr/vite-app/: index.html  package.json  pnpm-lock.yaml  vite.config.ts
(+458 files in other folders)
