[package]
name = "aphrodite-core"
version.workspace = true
edition.workspace = true
rust-version.workspace = true
license.workspace = true
authors.workspace = true
description = "Aphrodite core: DESIGN.md model, validator, taste store, policy engine."

[dependencies]
serde.workspace = true
serde_json.workspace = true
serde_yaml.workspace = true
thiserror.workspace = true
anyhow.workspace = true
tracing.workspace = true
rusqlite.workspace = true
pulldown-cmark.workspace = true
gray_matter.workspace = true
palette.workspace = true
time = { version = "0.3", features = ["serde", "formatting", "parsing", "macros"] }
glob-match = "0.2"
uuid = { version = "1", features = ["v4", "serde"] }
toml = "0.8"

[dev-dependencies]
indoc = "2"
