[package]
name = "aphrodite-generator"
version.workspace = true
edition.workspace = true
license.workspace = true
authors.workspace = true
description = "Prompt + skill + DESIGN.md context → DESIGN.md + hero HTML."

[dependencies]
aphrodite-core = { path = "../aphrodite-core" }
aphrodite-keyring = { path = "../aphrodite-keyring" }
serde.workspace = true
serde_json.workspace = true
serde_yaml.workspace = true
anyhow.workspace = true
thiserror.workspace = true
tokio.workspace = true
reqwest.workspace = true
tracing.workspace = true
minijinja.workspace = true
uuid = { version = "1", features = ["v4", "serde"] }
