[package]
name = "aphrodite-keyring"
version.workspace = true
edition.workspace = true
license.workspace = true
authors.workspace = true
description = "OS keychain abstraction for provider credentials."

[dependencies]
keyring.workspace = true
serde.workspace = true
serde_json.workspace = true
thiserror.workspace = true
anyhow.workspace = true
tracing.workspace = true
